# Maid-gpt

./: .gitignore  Cargo.toml  Dockerfile  README.md  askama.toml  config.toml.example  docker-compose.yml  main.py  pyproject.toml  rustfmt.toml
assets/: base_prompt.txt  config.example.toml  config.toml  format.txt  guest_database.txt  python_prelude.txt
assets/prompts/: abilities.txt  base_prompt.txt  character.txt  core.txt  guest_database.txt  pre-message.txt  reply.txt
crates/llam-engine/: Cargo.toml
crates/llam-engine/src/: chat.rs  error.rs  interface.rs  lib.rs  types.rs
crates/llam-engine/src/backends/openai/: mod.rs
crates/maid-openai/: Cargo.toml
crates/maid-tg/: Cargo.toml  build.rs
crates/maid-tg-codegen/: Cargo.toml
crates/maid-tg-codegen/src/: lib.rs  methods.rs  methods_emitter.rs  schemas.rs  schemas_emitter.rs
crates/maid-tg-core/: Cargo.toml  build.rs  local.rs  methods.yaml  methods.yml  schemas.yaml  types.yml
crates/maid-tg-core-codegen/: Cargo.toml
crates/maid-tg-core-codegen/src/: items.rs  lib.rs
crates/maid-tg-core-codegen/src/methods/: emitter.rs  schemas.rs
crates/maid-tg-core-codegen/src/types/: emitter.rs  mod.rs  schemas.rs
crates/maid-tg-core/src/: error.rs  lib.rs  methods.rs  request.rs  schemas.rs
crates/maid-tg/src/: bot.rs  lib.rs
maid/: _factory.py  config.py  maid.py  prompt.py  prompt_engine.py
maid/ai/: engine.py  openai.py  prompt_engine.py  schemas.py
maid/misc/: danbooru.py  role.py  typing.py
src/: config.rs  lib.rs  platform.rs  template_data.rs  templates.rs  utils.rs
src/ai/: message.rs  mod.rs  templates.rs
src/lam/: interface.rs  mod.rs  openai.rs
src/society/: telegram.rs
src/telegram/: mod.rs  typer.rs
