[package]
name = "maid"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[[bin]]
path = "bin/main.rs"
name = "maid"

[lib]
name = "maid"
path = "src/lib.rs"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
async-trait = "0.1.66"
serde = { version = "1.0.155", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
thiserror = "1.0.39"
serde_json = "1.0.94"

[dependencies]
maid-tg-core = { path = "crates/maid-tg-core" }

askama = "0.12.0"
owo-colors = "3.5.0"
regex = "1.7.1"
serde = { workspace = true }
serde_regex = "1.1.0"
toml = "0.7.2"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.26.0", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "io-util",
    "macros",
] }
anyhow = "1.0.69"
